tests/pass/run/ownership_temporary_move_ok/main.kira
struct Mesh {
    let id: Int
}

function makeMesh() -> Mesh {
    return Mesh { id: 11 }
}

function consume(mesh: Mesh) -> Int {
    return mesh.id
}

@Main
function main() {
    print(consume(makeMesh()))
    return
}
