tests/fail/semantics/macro_enum_applies_mismatch/main.kira
comptime macro NeedsStruct {
    kind { derive }
    appliesTo { struct }
    expand(target: Declaration) -> Syntax {
        return quote { }
    }
}

@Derive(NeedsStruct)
enum Color {
    Red
    Green
}

@Main
function main() {
    return
}
